--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.text-gradient {
+  @apply text-transparent bg-clip-text bg-gradient-to-r from-violet-600 to-teal-600;
+}
+
+.text-gradient-hover {
+  @apply hover:text-transparent bg-clip-text bg-gradient-to-r from-violet-600 to-teal-600;
+}
+
+.tech-container {
+  @apply grid grid-flow-col lg:grid-flow-row md:gap-6 gap-4 justify-center self-center;
+}
+
+.tech-list {
+  @apply relative flex items-center justify-center rounded-xl bg-white p-5 shadow-lg hover:shadow-none shadow-slate-100 w-32 h-24;
+}
+
+.favorite {
+  @apply border border-rose-500
+}
+
+.social-list {
+  @apply flex h-12 w-12 items-center justify-center rounded-full bg-white shadow-lg shadow-slate-200 hover:shadow-none;
+}
+
+.section {
+  @apply flex flex-col items-center pt-20 mt-40;
+}
+
+.tab-list {
+  @apply flex h-10 items-center px-8 text-gradient-hover justify-center border-l-2;
+}
+
+.tab-active {
+  @apply border-teal-600 text-gradient;
+}
