--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 }
 
 .tech-list {
-  @apply relative flex items-center justify-center rounded-xl bg-white p-5 shadow-lg hover:shadow-none shadow-slate-100 w-32 h-24;
+  @apply relative flex items-center justify-center rounded-xl bg-white p-5 shadow-lg hover:shadow-none shadow-slate-100 w-28 h-20 md:w-32 md:h-24;
 }
 
 .favorite {
